# whisper-studio-pro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  FAQ.md  INSTALLATION.md  PERFORMANCE.md  ROADMAP.md  SECURITY.md
src/whisper_studio/: __init__.py  __main__.py
src/whisper_studio/core/: __init__.py  application.py  transcription.py
src/whisper_studio/gui/: __init__.py  main.py  main_window.py
src/whisper_studio/utils/: system.py
