[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-studio-pro"
version = "1.0.0"
description = "Professional-grade audio transcription application with speaker diarization"
requires-python = ">=3.8"
authors = [
    {name = "WhisperStudio Team"}
]

[project.scripts]
whisper-studio = "whisper_studio.__main__:main"